# LoadDistributionBackend

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  example.env  main.py  pyproject.toml  requirements.txt
config/: logger.py
environments/: example.env
models/: base_entity.py  department.py  entities.py
modules/curriculum_parser/: __init__.py  read_spreadsheet.py
modules/excel_parser/: __init__.py  read_excel.py  read_spreadsheet.py  save_spreadsheet_data.py  spreadsheet_schemas.py
src/: main.py
src/api/: __init__.py  academic_hours.py  academic_task.py  auth.py  curriculum.py  department.py  education_component.py  file.py  semester.py  specialization.py  specialty.py  study_group.py
src/config/: __init__.py  environment.py  logger.py
src/dto/: base_dto.py  department.py
src/exceptions/: __init__.py  conflict.py  exception.py  not_found.py
src/middlewares/: __init__.py  cors.py  exception.py
src/models/: __init__.py  academic_hours.py  academic_task.py  academic_workload.py  academic_workload_formula.py  academic_workload_teacher.py  core.py  department.py  discipline.py  education_component.py  many_to_many_tables.py  semester.py  specialization.py  specialty.py  study_group.py  teacher.py  user.py
src/repositories/: __init__.py  academic_hours.py  academic_task.py  academic_workload.py  academic_workload_formula.py  academic_workload_teacher.py  department.py  discipline.py  education_component.py  education_components_study_groups.py  semester.py  specialization.py  specialty.py  (+3 more)
utils/: db_connect.py
(+73 files in other folders)
